src/app/site-body/blog/search-posts/search.posts.component.scss
@import "../../../variables.scss";

.search-form-container {
    display: inline-table;
    width: 100%;

    .search-form {
        display: table-cell;
        vertical-align: top;

        mat-form-field {
            width: 100%;
        }
    }

    .search-button {
        display: table-cell;
        text-align: right;
        vertical-align: top;
        padding-top: 5px;
        width: 70px;
    }
}

.post-search-result-container {
    display: block;

    ~.post-search-result-container {
        margin-top: 20px;
    }
}

.results-found-text {
    margin-bottom: 10px;
}

.search-posts-dialog {
    position: relative;
}

.search-dialog-loader {
    position: absolute;
    top: -24px;
    left: -24px;
    width: calc(100% - 30px);
    height: calc(100% - 30px);
    background: white;
    z-index: 1;
    text-align: center;
    padding: 40px;
    font-size: 24px;
    font-weight: 600;
    line-height: 2em;
}

